--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,18 @@ services:
     networks:
       - nader-ai-network
 
+  telegram:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    restart: unless-stopped
+    command: ["python", "-m", "engine.packages.telegram"]
+    networks:
+      - nader-ai-network
+
+
 networks:
   nader-ai-network:
-    driver: bridge 
+    driver: bridge
